# e-uae-ppc-jit-nix

./: .gitignore  CHANGES  CHANGES-rich.txt  ChangeLog  Makefile.am  Makefile.in  PUAE-2012_04_27.tgz  README  aclocal.m4  bootstrap.sh  bronx_.sh  bronx_nojit.sh  build_linux_gtk.sh  build_linux_nojit.sh  build_linux_qt.sh  build_linux_sdl.sh  build_macos_cocoa.sh  build_macos_cocoa_aros.sh  build_macos_cocoa_scsi.sh  build_macos_qt.sh  build_macos_sdl.sh  build_macos_xcode.sh  build_native_client.sh  build_pandora_gtk.sh  config.sub  configure  configure.ac  configure.in  release_.sh  shm.sh
debian/: README  (+8 more)
src/: Makefile.am  Makefile.in  a2065.c  a2091.c  adide.c  akiko.c  amax.c  ar.c  arcadia.c  aros.rom.c  audio.c  autoconf.c  blitter.c  blkdev-libscg.c  blkdev.c  blkdev_cdimage.c  bsdsocket-posix-new.c  bsdsocket-posix.c  bsdsocket.c  build68k.c  calc.c  catweasel.c  cd32_fmv.c  cdrom-handler.c  cdrom.c  cdtv.c  cfgfile.c  cia.c  clipboard.c  codegen_x86.c  codegen_x86.h  compemu.h  compemu_abandoned.c  compemu_codegen.h  compemu_compiler.h  compemu_compiler_ppc.c  compemu_fpp.c  compemu_macroblock_structs.h  compemu_macroblocks.h  compemu_macroblocks_ppc.c  (+101 more)
src/caps/: Makefile.in  caps.c
src/dms/: Makefile.in  pfile.c  u_deep.c  u_heavy.c
src/gfx-amigaos/: Makefile.in  ami-win.c
src/gfx-beos/: Makefile.am  Makefile.in  be-Input.cpp  be-Input.h  be-UAE.cpp  be-UAE.h  be-Window.cpp  be-Window.h
src/gfx-cocoa/: Makefile.am  cocoa_gfx.m
src/gfx-curses/: Makefile.in  ncurses.c
src/gfx-pepper/: Makefile.am  gfx-pepper-2d.c  gfx-pepper-3d.c  gfx-pepper.c  gfx.h
src/gfx-retro/: AMIGAkeymap.h  TODO.txt  diskutils.c  euae-mapper.c  font2.c  graph.c  graph.h  libretro-euae.c  libretro-euae.h  vkbd.c  vkbd_def.h
src/gfx-sdl/: Makefile.am  Makefile.in  rawkeys.c  sdlgfx.c  sdlgfx.h  sdlkeys.c  sdlkeys_dik.c  sdlkeys_dik.h
src/gfx-svga/: Makefile.in  svga.c
src/gfx-x11/: Makefile.am  Makefile.in  x11keys.c  xwin.c
src/gui-beos/: Makefile.in  gui.cpp
src/gui-cocoa/: Makefile.in  cocoaui.m
src/gui-gtk/: Makefile.am  Makefile.in  chipsetspeedpanel.c  chipsetspeedpanel.h  chipsettypepanel.c  chooserwidget.c  cpuspeedpanel.c  cpuspeedpanel.h  cputypepanel.c  cputypepanel.h  floppyfileentry.c  gtkui.c  led.c  led.h  util.c  util.h
src/gui-html/: Makefile.am  default.uaerc  html_gui.c  ppapi.cc  ppapi.h  uae.css  uae.html  uae.js  uae.nmf  uae_faq.html
src/gui-muirexx/: Makefile.in  ami-gui.c  ami-rexx.c
src/gui-none/: Makefile.in  nogui.c
src/gui-qt/: Makefile.am  main.cpp  puae_bridge.cpp  puae_bridge.h  puae_mainwindow.cpp  puae_mainwindow.h  puae_mainwindow.ui  puae_registry.cpp  puae_registry.h
src/gui-retro/: dialog.c  dlgAbout.c  dlgAlert.c  dlgFileSelect.c  dlgFloppy.c  dlgHardDisk.c  dlgJoystick.c  dlgMain.c  dlgMemory.c  dlgMisc.c  dlgRom.c  dlgSound.c  dlgSystem.c  dlgVideo.c  sdlgui.c  str.c  thumb.c  unzip.c  unzip.h  zip.c
src/gui-sdl/: Makefile.am  inputmode.c  inputmode.h  menu.c  menu.h  menu_load.c  menu_prefs.c  menu_tweak.c  vkbd.cpp  vkbd.h  volumecontrol.c  volumecontrol.h
src/include/: .byteorder.h.swp  .uae_endian.h.swp  a2065.h  a2091.h  akiko.h  ar.h  arcadia.h  audio.h  autoconf.h  blitter.h  blkdev.h  bsdsocket.h  byteorder.h  cache.h  cacheinvalidate.h  caps.h  catweasel.h  cd32_fmv.h  cdrom.h  cdtv.h  cfgfile.h  cia.h  clipboard.h  compemu.h  cpu_prefetch.h  cpummu.h  cpummu030.h  crc32.h  custom.h  debug.h  disk.h  dongle.h  drawing.h  driveclick.h  enforcer.h  events.h  events_jit.h  events_normal.h  filesys.h  fpp-unknown.h  (+49 more)
src/jd-amigainput/: Makefile.in  joystick.c
src/jd-amigaos/: Makefile.in  joystick.c
src/jd-beos/: Makefile.in  joystick.cpp
src/jd-linuxold/: Makefile.in  joystick.c
src/jd-none/: Makefile.in  joystick.c
src/jd-pepper/: joystick.c
src/jd-sdl/: Makefile.in  joystick.c
src/keymap/: Makefile.am  Makefile.in  beos_rawkeys.c  beos_rawkeys.h  hotkeys_common.h  keymap.c  keymap.h  keymap_all.h  keymap_common.h  quartz_rawkeys.c  quartz_rawkeys.h  x11pc_rawkeys.c  x11pc_rawkeys.h
src/md-68k/: Makefile.am  Makefile.in  cpuopti  exectasks.h  m68k.h  rpt.h
src/md-amd64-gcc/: Makefile.in  rpt.h
src/md-generic/: Makefile.in  exectasks.h  rpt.h  support.c
src/md-i386-gcc/: Makefile.am  Makefile.in  exectasks.h  m68k.h  maccess.h  rpt.h  support.c
src/md-i386-watcom/: Makefile.in  exectasks.h
src/md-ppc/: Makefile.in  exectasks.h
src/md-ppc-gcc/: Makefile.am  Makefile.in  exectasks.h  m68k.h  m68kops.h  maccess.h  rpt.h  support.c
src/md-x86-gcc/: m68kops.h  maccess.h  machdep.h  rpt.h  support.c
src/od-amiga/: Makefile.am  Makefile.in  ami-appw.c  ami-disk.c  ami-gui.c  ami-rexx.c  ami-win.c  blkdev-amiga.c  exectasks.h  joystick.c  main.c  memory.c  memory_uae.h  sound.c  sound.h  support.c  thread.h
src/od-beos/: Makefile.am  Makefile.in  beos.cpp  exectasks.h  gfx.c  gui.cpp  joystick.cpp  main.cpp  memory_uae.h  sound.cpp  sound.h
src/od-generic/: Makefile.am  Makefile.in  exectasks.h  joystick.c  main.c  memory.c  memory_uae.h  parser.c  sound.c
src/od-linux/: Makefile.am  Makefile.in  blkdev-linux.c  exectasks.h  joystick.c  memory.c
src/od-macos/: Makefile.am  Makefile.in  mac.c
src/od-macosx/: Credits.rtf.in  Info.plist  Info.plist.in  Makefile.am  Makefile.in  OSCacheControl.h  hrtimer.h  main.h  main.m  memory.c  memory_uae.h
src/od-pOS/: pos-rexx.c
src/od-win32/: Makefile.am  Makefile.in  ahidsound.c  avioutput.c  avioutput.h  blkdev_win32_aspi.c  blkdev_win32_ioctl.c  blkdev_win32_spti.c  bsdsock.c  dinput.c  direct3d.c  drivesound.c  dxwrap.c  dxwrap.h  filter.h  fsdb_win32.c  hardfile_win32.c  ioport.c  ioport.h  keyboard_win32.c  main.c  makeexe.bat  memory.c  midi.c  midi.h  mman.c  opengl.c  parser.c  parser.h  picasso96_win.c  picasso96_win.h  scaler.c  screenshot.c  scsidef.h  serial_win32.c  srcrelease.bat  sysconfig.h  win32.c  win32.h  win32_filesys.c  (+8 more)
src/qemuvga/: cirrus_vga.c  lsi53c895a.c  qemuuaeglue.c  qemuuaeglue.h  vga.c
src/sd-af/: Makefile.in
src/sd-alsa/: Makefile.in  sound.c  sound.h
src/sd-amigaos/: Makefile.in  sound.c  sound.h
(+241 files in other folders)
